[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["cloudsenseiNG <bodlexnig@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
wrapt = "^1.16.0"
regex = "^2024.5.15"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
